metadata-retriever/metadata/objects/Test_Cases__c.object
<CustomObject>
    <description>PMO: Test Management. Store all test scripts that need to be run.(Edition2)</description>
    <fields>
        <fullName>Case_No_ext__c</fullName>
        <externalId>true</externalId>
        <label>Case No.-ext</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Status__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Status</label>
        <referenceTo>Round__c</referenceTo>
        <relationshipLabel>Test Cases</relationshipLabel>
        <relationshipName>Test_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_description__c</fullName>
        <label>Case description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Categary__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catagory1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catagory2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catagory3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catagory4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Campaign Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case &amp; Knowledge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Portfolio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SSI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complaint Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interface</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Migration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complaint Management (M30)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Data</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Count_Blocked_Step__c</fullName>
        <label>*Count Blocked Step</label>
        <summaryFilterItems>
            <field>Test_step1__c.Actual_Results__c</field>
            <operation>equals</operation>
            <value>Blocked</value>
        </summaryFilterItems>
        <summaryForeignKey>Test_step1__c.Test_Cases1__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_Dev_Step__c</fullName>
        <label>*Count Dev Step</label>
        <summaryFilterItems>
            <field>Test_step1__c.Actual_Results__c</field>
            <operation>equals</operation>
            <value>In Development</value>
        </summaryFilterItems>
        <summaryForeignKey>Test_step1__c.Test_Cases1__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_Failed_Step__c</fullName>
        <label>*Count Failed Step</label>
        <summaryFilterItems>
            <field>Test_step1__c.Actual_Results__c</field>
            <operation>equals</operation>
            <value>Failed</value>
        </summaryFilterItems>
        <summaryForeignKey>Test_step1__c.Test_Cases1__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_Passed_Step__c</fullName>
        <label>*Count Passed Step</label>
        <summaryFilterItems>
            <field>Test_step1__c.Actual_Results__c</field>
            <operation>equals</operation>
            <value>Pass</value>
        </summaryFilterItems>
        <summaryForeignKey>Test_step1__c.Test_Cases1__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_Steps__c</fullName>
        <label>*Count Steps</label>
        <summaryForeignKey>Test_step1__c.Test_Cases1__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Feature__c</fullName>
        <label>Feature</label>
        <picklist>
            <controllingField>Finction__c</controllingField>
            <picklistValues>
                <fullName>Feature1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feature2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feature3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feature4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M20.6.1 Sales Leads Handling (销售线索处理流程)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M20.6.3 Sales Leads Follow Handling (销售线索跟进流程)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M20.6.2 Sales Leads Verification Handling (销售线索核实流程)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20.1.4 Irregular IB Handling (异常电话处理流程)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M20.1.2 General IB Handling (一般呼入处理流程)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M20.1.3  Inquiry and Escalation Handling (问询及升级处理流程)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M20.1.3.1  Direct Mail Requirement Handle (直邮需求处理流程)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M20.1.3.2  Financing Consulting Handling (金融咨询、租赁咨询处理流程)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M20.1.3.3 Maybach and Van handling (迈巴赫及商务车咨询流程)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M20.1.3.4 Customer Data Check (用户信息查询流程)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M20.1.3.6 IB Dialect Handling (方言处理流程)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M20.2.1 Regular OB Handling (常规外呼处理流程)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M20.3.1 SMS Sending (短信发送流程)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M20.3.2 Direct Mail Handling (直邮任务处理流程)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M20.5.1 Quality Control Process (质量监控流程)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M20.5.4 Recording Calibration Process (录音校准流程)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Finction__c</fullName>
        <label>Function</label>
        <picklist>
            <controllingField>Categary__c</controllingField>
            <picklistValues>
                <fullName>Function1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Function2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Function3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Function4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M20.6 CAC Lead Flow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead escalation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M40.2 Dealer Leads Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Document AS LEAD types: OB call process - LEAD capturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Campaign Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAC Campaign Segmentation, Execution &amp; Response Capture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case &amp; Knowledge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Portfolio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M20.1 IB Handling (IB 流程)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M20.2 OB Handling (外呼流程)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M20.3 Non-voice Handling (非语音业务流程)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M20.5 Management Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Validate the User Info. In CAC System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OB to user and log the case in CAC Call Handling System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enquiry and escalation process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Create a Sales Leads in CAC system and Pass to RME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media communication history syschronization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.6 Complaint Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M30.1 Dealer Complaint Management Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M30.2 Regional Complaint Management Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M30.3 CRM AS Central Complaint Management Part 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iCRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Market_Country__c</fullName>
        <label>Market / Country</label>
        <picklist>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Module_Object__c</fullName>
        <label>Module / Object</label>
        <picklist>
            <picklistValues>
                <fullName>Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aftersales Record</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chatter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact / Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Portal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Key</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Knowledge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Literature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Literature Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preferences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Report/Dashboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Record</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Console</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SSI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle / Asset</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle Relationship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warranty Record</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>New_Test_Cases__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New Test Cases</label>
        <referenceTo>Change_Request__c</referenceTo>
        <relationshipLabel>Test Cases</relationshipLabel>
        <relationshipName>Test_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pre_Requisite__c</fullName>
        <label>Pre Requisite</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reference_No__c</fullName>
        <label>Reference No.</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requirement_User_Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requirement / User Story / Use Case</label>
        <referenceTo>Requirement_UserStory__c</referenceTo>
        <relationshipLabel>Test Cases</relationshipLabel>
        <relationshipName>Test_Case</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blocked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Testable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Passed 1st Round</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Test_Process__c</fullName>
        <label>Test Process</label>
        <picklist>
            <picklistValues>
                <fullName>Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case/Knowledge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Portfolio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SSI/QC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invalid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phase III</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complaint Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complaint Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Portal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBOBQC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead escalation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Campaign Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20.1.4 Irregular IB Handling (异常电话处理流程)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case &amp; Knowledge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M20.1.2 General IB Handling (一般呼入处理流程)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M20.1.3  Inquiry and Escalation Handling (问询及升级处理流程)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M20.1.3.1  Direct Mail Requirement Handle (直邮需求处理流程)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M20.1.3.2  Financing Consulting Handling (金融咨询、租赁咨询处理流程)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M20.1.3.3 Maybach and Van handling (迈巴赫及商务车咨询流程)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M20.1.3.4 Customer Data Check (用户信息查询流程)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M20.1.3.6 IB Dialect Handling (方言处理流程)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M20.2.1 Regular OB Handling (常规外呼处理流程)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Test_Round__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test Round</label>
        <referenceTo>Test_Round__c</referenceTo>
        <relationshipName>Test_Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>executor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Executor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Test_Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Test Cases</label>
    <listViews>
        <fullName>All_Integration_Test_Cases</fullName>
        <columns>NAME</columns>
        <columns>Test_Round__c</columns>
        <columns>Subject__c</columns>
        <columns>Test_Process__c</columns>
        <columns>Status__c</columns>
        <columns>Reference_No__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Market_Country__c</field>
            <operation>equals</operation>
            <value>Australia</value>
        </filters>
        <filters>
            <field>Test_Round__c</field>
            <operation>equals</operation>
            <value>Integration Test</value>
        </filters>
        <label>All-Integration-Test-Cases</label>
    </listViews>
    <listViews>
        <fullName>All_Test_Cases_MBAuP</fullName>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>Test_Process__c</columns>
        <columns>Status__c</columns>
        <columns>Test_Round__c</columns>
        <columns>Reference_No__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Market_Country__c</field>
            <operation>equals</operation>
            <value>Australia</value>
        </filters>
        <label>All Test-Cases MBAuP</label>
    </listViews>
    <listViews>
        <fullName>All_UAT_W_O_INT_Cases</fullName>
        <columns>NAME</columns>
        <columns>Test_Round__c</columns>
        <columns>Subject__c</columns>
        <columns>Test_Process__c</columns>
        <columns>Status__c</columns>
        <columns>Reference_No__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Market_Country__c</field>
            <operation>equals</operation>
            <value>Australia</value>
        </filters>
        <filters>
            <field>Test_Round__c</field>
            <operation>equals</operation>
            <value>UAT W/O Integration</value>
        </filters>
        <label>All-UAT-W/O-INT-Cases</label>
    </listViews>
    <listViews>
        <fullName>Gloria_s_test_case</fullName>
        <columns>Test_Process__c</columns>
        <columns>NAME</columns>
        <columns>Case_No_ext__c</columns>
        <columns>Count_Steps__c</columns>
        <columns>Pre_Requisite__c</columns>
        <columns>Requirement_User_Story__c</columns>
        <columns>Case_description__c</columns>
        <columns>Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>ST-lead</value>
        </filters>
        <label>Gloria&apos;s test case</label>
    </listViews>
    <listViews>
        <fullName>INT_test_cases</fullName>
        <booleanFilter>(1 OR 2)</booleanFilter>
        <columns>NAME</columns>
        <columns>Case_description__c</columns>
        <columns>Categary__c</columns>
        <columns>Feature__c</columns>
        <columns>Finction__c</columns>
        <columns>Pre_Requisite__c</columns>
        <columns>Reference_No__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>Shi Ann</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>Wayne Bai</value>
        </filters>
        <label>INT test cases</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Test_Cases</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Case_description__c</columns>
        <columns>Case_Status__c</columns>
        <columns>Categary__c</columns>
        <columns>Subject__c</columns>
        <columns>Requirement_User_Story__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Test Cases</label>
    </listViews>
    <listViews>
        <fullName>ST_AU_Cpn</fullName>
        <columns>NAME</columns>
        <columns>Case_description__c</columns>
        <columns>Subject__c</columns>
        <columns>Requirement_User_Story__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Market_Country__c</field>
            <operation>equals</operation>
            <value>Australia</value>
        </filters>
        <label>ST_AU-Cpn</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>System_Test_Case_for_Release_1_1</fullName>
        <columns>NAME</columns>
        <columns>Requirement_User_Story__c</columns>
        <columns>Subject__c</columns>
        <columns>Status__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Mine</filterScope>
        <label>System Test Case for Release 1.1</label>
        <sharedTo>
            <role>Australia</role>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Case No.</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>